src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
@use '../../../../styles/_globals.scss' as *;

:host {
  overflow: auto;
  display: flex;
  height: 100%;

  &.isScrolled {
    border-top: 1px solid var(--extra-border-color);
  }
}

.days {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 1fr;
  box-sizing: border-box;
  padding: 24px;
  padding-top: 0;
  gap: 16px;

  @include mq(xs) {
    gap: 24px;
  }

  @include mq(xs, max) {
    display: block;
    width: 100%;
    max-width: 100%;
    padding: 16px;
  }
}

.loading-more {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 260px;
  padding: 2rem;

  @include mq(xs, max) {
    min-width: 100%;
    width: 100%;
  }
}

